porfolio section all set upgit add . lookin  goood baby

--- a/index.html
+++ b/index.html
@@ -35,84 +35,81 @@
     </header>
     <!-- end navigation -->
 
-    <!-- hero/jumbotron -->
+    <!-- hero/Banner -->
     <section id="About" class="hero">
       <div class="hero-text">
         <h2>This is MelenDev</h2>
         <p>
-          seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it
-          messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund
-          Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche
-          tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you
-          probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
+          Welcome! MelenDev is a little project of mine with one goal in mind: To be your one-stop for web solutions! My name is Sebastian Melendez, and I am a Software Engineer and budding Web developer with a background Software Development Consulting consulting and Agile solutions delivery. My Idea of success is simple, I want to find unique solutions for any and all of your amazing dreams! My outgoing personality and team-driven focus on work make me a fantastic addition to any team and an excellent point of contact for any customer looking for a freelance web dev with great taste and interest in the success of any project. Feel free to look around this web portfolio I have prepared for you; here, you will find easy access to some of my highlighted projects. You can also contact me so we can get to know each other; I’ll be thrilled to work together until we find a solution to your dreams. I will either find a way or make one!
         </p>
       </div>
       <div class="shade"></div>
       <div class="hero-banner acrylic">
-        <h3>I am Sebastian Melendez</h3>
-        <p>Lets get to know each other!</p>
-            <div class="step-img">
+       <div>
+        <h3>"I will either find a way or make one!"</h3>
+        <p> - Sebastian Melendez</p>
+      </div>
+            <div class="banner-img">
                 <img src="./assets/images/Sebastian.jpg" alt="A picture of Sebastian Melendez" />
             </div>
       </div>
     </section>
     <!-- end header -->
 
-    <!-- "what you do" start -->
-    <section id="Projects" class="steps">
+    <!-- Projects start -->
+    <section id="Projects" class="Projects">
       <div class="flex-row">
         <h2 class="section-title secondary-border">
           Portfolio
         </h2> 
       </div>
-      <div class="step">
-        <h3>Step 1.</h3>
+     <section class="container">
+
+      <div class="Thumb">
+        <h3>Run Buddy</h3>
         <div class="step-info">
-          <div class="step-img">
-            <img src="./assets/images/step-1.svg" alt="" />
-          </div>
-          <div class="step-text">
-            <h4>Fill Out The Form Above</h4>
-            <p>You're already here, so why not?</p>
+          <div class="Box">
+            <a target="_blank" href="https://sebasmelendez.github.io/run-buddy/">
+              <img class="Thumbnail" src="/assets/images/RunBuddy.jpg" alt="Forest">
+            </a>
           </div>
         </div>
       </div>
-      <div class="step">
-        <h3>Step 2.</h3>
+      <div class="Thumb">
+        <h3>Horiseon SS</h3>
         <div class="step-info">
-          <div class="step-img">
-            <img src="./assets/images/step-2.svg" alt="" />
-          </div>
-          <div class="step-text">
-            <h4>Consult With One Of Our Trainers</h4>
-            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+          <div class="Box">
+            <a target="_blank" href="https://sebasmelendez.github.io/HoriseonSS/">
+              <img class="Thumbnail" src="/assets/images/HoriSEOn.jpg" alt="Forest">
+            </a>
           </div>
         </div>
       </div>
-      <div class="step">
-        <h3>Step 3.</h3>
+      <div class="Thumb">
+        <h3>Coming Soon!</h3>
         <div class="step-info">
-          <div class="step-img">
-            <img src="./assets/images/step-3.svg" alt="" />
-          </div>
-          <div class="step-text">
-            <h4>Get Running</h4>
-            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+          <div class="Box">
+            <a target="_blank" href="/assets/images/placeholder.jpg">
+              <img class="Thumbnail" src="/assets/images/placeholder.jpg" alt="Forest">
+            </a>
           </div>
         </div>
       </div>
-      <div class="step">
-        <h3>Step 4.</h3>
+      <div class="Thumb">
+        <h3>Coming Soon!</h3>
         <div class="step-info">
-          <div class="step-img">
-            <img src="./assets/images/step-4.svg" alt="" />
-          </div>
-          <div class="step-text">
-            <h4>See Results</h4>
-            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+          <div class="Box">
+            <a target="_blank" href="/assets/images/placeholder.jpg">
+              <img class="Thumbnail" src="/assets/images/placeholder.jpg" alt="Forest">
+            </a>
           </div>
         </div>
       </div>
+    </section>
+    <div class="flex-row">
+      <h2 class="section-title secondary-border">
+      </h2> 
+    </div>
     </section>
     <!-- "what you do" end -->
 
@@ -144,6 +141,7 @@
     <!-- footer -->
     <footer>
       <h2>❤️ Made with love in El Salvador.</h2>
+      <p> ⚡Powered by the RB Engine</p>
     </footer>
     <!-- footer end -->
   </body>
