--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <!-- <div class="logicon">
             <img src="./assets/images/Favicon.png" alt="" />
         </div> -->
-      <h1>     
-        <!-- <div class="logicon">
+                <!-- <div class="logicon">
             <img src="./assets/images/Favicon.png" alt="" />
         </div> -->
+      <h1>     
         <a href="./index.html"><img class= "logimage"src="./assets/images/Favicon.png" alt="" /><span class="lotext">MelenDev</span></a>
       </h1>
       <nav>
@@ -64,10 +64,9 @@
         </h2> 
       </div>
      <section class="container">
-
       <div class="Thumb">
         <h3>Run Buddy</h3>
-        <div class="step-info">
+        <div class="Thumb-container">
           <div class="Box">
             <a target="_blank" href="https://sebasmelendez.github.io/run-buddy/">
               <img class="Thumbnail" src="/assets/images/RunBuddy.jpg" alt="Forest">
@@ -77,7 +76,7 @@
       </div>
       <div class="Thumb">
         <h3>Horiseon SS</h3>
-        <div class="step-info">
+        <div class="Thumb-container">
           <div class="Box">
             <a target="_blank" href="https://sebasmelendez.github.io/HoriseonSS/">
               <img class="Thumbnail" src="/assets/images/HoriSEOn.jpg" alt="Forest">
@@ -87,7 +86,7 @@
       </div>
       <div class="Thumb">
         <h3>Coming Soon!</h3>
-        <div class="step-info">
+        <div class="Thumb-container">
           <div class="Box">
             <a target="_blank" href="/assets/images/placeholder.jpg">
               <img class="Thumbnail" src="/assets/images/placeholder.jpg" alt="Forest">
@@ -97,7 +96,7 @@
       </div>
       <div class="Thumb">
         <h3>Coming Soon!</h3>
-        <div class="step-info">
+        <div class="Thumb-container">
           <div class="Box">
             <a target="_blank" href="/assets/images/placeholder.jpg">
               <img class="Thumbnail" src="/assets/images/placeholder.jpg" alt="Forest">
@@ -106,10 +105,6 @@
         </div>
       </div>
     </section>
-    <div class="flex-row">
-      <h2 class="section-title secondary-border">
-      </h2> 
-    </div>
     </section>
     <!-- "what you do" end -->
 
@@ -125,15 +120,19 @@
         <div>
           <h3>My Details</h3>
           <p>
-            Any questions or concerns before signing up? 
+            Let's get to know each other!  
             <br/>
-            Let us know and we'll be happy to talk to you!
+            Who ya gonna call? (Me!)
           </p>
-
+          <div class="socials">
+          <a target="_blank" href="https://www.linkedin.com/in/sebastian-melendez12/"><img class= "social-Icons"src="./assets/images/linkedin-logo.png" alt="Linkedin Logo" /></a>
+          <a target="_blank" href="https://github.com/SebasMelendez"><img class= "social-Icons"src="./assets/images/GitHub-Mark-Light-120px-plus.png" alt="Github Logo" /></a>
+          </div class="social-links">
           <address>
-            P: 555.RUN.BUDZ (555.786.2839)<br/>
-            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            P: (585)-308-1630<br/>
+            E: <a href="mailto:sebastian.melendezm@outlook.com?subject=Hey! I saw your site!">sebastian.melendezm@outlook.com</a>
           </address>
+        </div>
       </div>
     </section>
     <!-- "reach out" end -->
