--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="Thumb-container">
           <div class="Box">
             <a target="_blank" href="https://sebasmelendez.github.io/run-buddy/">
-              <img class="Thumbnail" src="/assets/images/RunBuddy.jpg" alt="Forest">
+              <img class="Thumbnail" src="./assets/images/RunBuddy.jpg" alt="Run Buddy">
             </a>
           </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="Thumb-container">
           <div class="Box">
             <a target="_blank" href="https://sebasmelendez.github.io/HoriseonSS/">
-              <img class="Thumbnail" src="/assets/images/HoriSEOn.jpg" alt="Forest">
+              <img class="Thumbnail" src="./assets/images/HoriSEOn.jpg" alt="Horiseon">
             </a>
           </div>
         </div>
@@ -89,7 +89,7 @@
         <div class="Thumb-container">
           <div class="Box">
             <a target="_blank" href="/assets/images/placeholder.jpg">
-              <img class="Thumbnail" src="/assets/images/placeholder.jpg" alt="Forest">
+              <img class="Thumbnail" src="./assets/images/placeholder.jpg" alt="Coming Soon">
             </a>
           </div>
         </div>
@@ -99,7 +99,7 @@
         <div class="Thumb-container">
           <div class="Box">
             <a target="_blank" href="/assets/images/placeholder.jpg">
-              <img class="Thumbnail" src="/assets/images/placeholder.jpg" alt="Forest">
+              <img class="Thumbnail" src="./assets/images/placeholder.jpg" alt="Coming Soon">
             </a>
           </div>
         </div>
