New Stellar prototype for first item in portfolio

--- a/index.html
+++ b/index.html
@@ -63,8 +63,24 @@
           Portfolio
         </h2> 
       </div>
+      <!-- Stellar prototype -->
+      <section class="container">
+        <div class="Thumb">
+          <h3>Run Buddy</h3>
+          <div class="Thumb-container">
+            <div class="Box">
+              <a target="_blank" href="https://sebasmelendez.github.io/run-buddy/">
+                <img class="Thumbnail stellar" src="./assets/images/RunBuddy.jpg" alt="Run Buddy">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
      <section class="container">
-      <div class="Thumb">
+
+      <!-- will restore when a better implementation has been prototyped -->
+
+      <!-- <div class="Thumb">
         <h3>Run Buddy</h3>
         <div class="Thumb-container">
           <div class="Box">
@@ -73,7 +89,8 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
+
       <div class="Thumb">
         <h3>Horiseon SS</h3>
         <div class="Thumb-container">
