added new project to spotlight!

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
         </div>
       </div>
       <div class="Thumb">
-        <h3>Coming Soon!</h3>
+        <h3>Password Generator!</h3>
         <div class="Thumb-container">
           <div class="Box">
-            <a target="_blank" href="/assets/images/placeholder.jpg">
-              <img class="Thumbnail" src="./assets/images/placeholder.jpg" alt="Coming Soon">
+            <a target="_blank" href="https://sebasmelendez.github.io/password-gen/">
+              <img class="Thumbnail" src="./assets/images/pwdGen.jpg" alt="Password Generator">
             </a>
           </div>
         </div>
