added poke safari to project!

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
       <!-- Stellar prototype -->
       <section class="container">
         <div class="Thumb">
-          <h3>Run Buddy</h3>
+          <h3>Pokemon Safari! jquery, Bulma, Openweather API & Pokemon API</h3>
           <div class="Thumb-container">
             <div class="Box">
-              <a target="_blank" href="https://sebasmelendez.github.io/run-buddy/">
-                <img class="Thumbnail stellar" src="./assets/images/RunBuddy.jpg" alt="Run Buddy">
+              <a target="_blank" href="https://sebasmelendez.github.io/pokemon-safari/">
+                <img class="Thumbnail stellar" src="./assets/images/screeenshotPokeSafari.jpg" alt="Pokemon Safari!">
               </a>
             </div>
           </div>
