--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
           </div>
         </div>
       </div> -->
+      <div class="Thumb">
+        <h3>Labcheck (WIP)</h3>
+        <div class="Thumb-container">
+          <div class="Box">
+            <a target="_blank" href="https://labcheck.herokuapp.com/">
+              <img class="Thumbnail" src="./assets/images/labckecl.jpg" alt="Coming Soon">
+            </a>
+          </div>
+        </div>
+      </div>
 
       <div class="Thumb">
         <h3>Horiseon SS</h3>
@@ -111,16 +121,7 @@
           </div>
         </div>
       </div>
-      <div class="Thumb">
-        <h3>Coming Soon!</h3>
-        <div class="Thumb-container">
-          <div class="Box">
-            <a target="_blank" href="/assets/images/placeholder.jpg">
-              <img class="Thumbnail" src="./assets/images/placeholder.jpg" alt="Coming Soon">
-            </a>
-          </div>
-        </div>
-      </div>
+
     </section>
     </section>
     <!-- "what you do" end -->
